# spotify-data-fun

./: .gitignore  README.md  main.py  parse.py  pyproject.toml
app/: models.py  parser.py  writers.py
