[project]
name = "spotify-util"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "pylsp-mypy>=0.7.0",
    "python-lsp-server[all]>=1.14.0",
    "refurb>=2.2.0",
    "ruff>=0.14.14",
    "types-ratelimit>=2.2.0.20250501",
    "types-requests>=2.32.4.20260107",
]
